--- a/config/crescenttool/default/core.entity_form_display.paragraph.section.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.paragraph.section.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.paragraph.section.field_html_anchor
     - field.field.paragraph.section.field_image_background
     - field.field.paragraph.section.field_style
+    - field.field.paragraph.section.field_title
     - image.style.thumbnail
     - paragraphs.paragraphs_type.section
   module:
@@ -55,7 +56,7 @@ content:
     type: string_textfield
     region: content
   field_components:
-    weight: 4
+    weight: 2
     settings:
       title: Component
       title_plural: Components
@@ -97,6 +98,14 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
+  field_title:
+    type: string_textfield
+    weight: 1
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   status:
     type: boolean_checkbox
     weight: 6
@@ -106,5 +115,4 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
-  field_title: true
   uid: true
