PublishParagraphs: Publish all paragraphs.

--- a/docroot/modules/custom/crescenttool_core/crescenttool_core.routing.yml
+++ b/docroot/modules/custom/crescenttool_core/crescenttool_core.routing.yml
@@ -13,3 +13,12 @@ crescenttool_core.set_default_listing_image_process:
     _permission: 'access administration pages'
   options:
     _admin_route: TRUE
+crescenttool_core.publish_all_paragraphs:
+  path: '/admin/config/crescenttool-core/publish-all-paragraphs'
+  defaults:
+    _controller: '\Drupal\crescenttool_core\Controller\PublishAllParagraphs::process'
+    _title: 'Publish all Paragraphs'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
