--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -559,6 +559,8 @@ view--media-pages:
   css:
     component:
       css/libraries/view/media-pages.css: {}
+  js:
+    js/libraries/view/media-pages.js: {}
 
 view--taxonomy-term:
   version: 1.x
