--- a/config/crescenttool/default/config_export_ignore.settings.yml
+++ b/config/crescenttool/default/config_export_ignore.settings.yml
@@ -1,3 +1,2 @@
-ignored_config_entities:
-  - 'block.block.custom_*'
+configuration_names:
   - 'crescenttool_core.settings:warranty_highest_exported_sid'
