Removed extra line in libraries, moved thumbnails above main slider slides, added swiper pagination, removed update pointer events, changed sliders width, updated thumb slide font size, added image styles, updated thumbnail image styles,

--- a/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.default.yml
@@ -9,8 +9,8 @@ dependencies:
     - field.field.paragraph.banner_cta_slide.field_text_pagination
     - field.field.paragraph.banner_cta_slide.field_thumbnail_image
     - field.field.paragraph.banner_cta_slide.field_title
-    - image.style.large_landscape
     - paragraphs.paragraphs_type.banner_cta_slide
+    - responsive_image.styles.cta_slider_16x9
   module:
     - blazy
     - field_group
@@ -67,8 +67,8 @@ content:
     weight: 0
     label: hidden
     settings:
-      image_style: large_landscape
-      responsive_image_style: ''
+      image_style: ''
+      responsive_image_style: cta_slider_16x9
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
