--- a/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.thumbnail.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.thumbnail.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.banner_cta_slide.field_text_pagination
     - field.field.paragraph.banner_cta_slide.field_thumbnail_image
     - field.field.paragraph.banner_cta_slide.field_title
+    - image.style.banner_cta_slider_210x50_
     - paragraphs.paragraphs_type.banner_cta_slide
   module:
     - blazy
@@ -31,7 +32,7 @@ content:
     weight: 1
     label: hidden
     settings:
-      image_style: ''
+      image_style: banner_cta_slider_210x50_
       responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
