--- a/config/crescenttool/default/image.style.banner_cta_slider_175x42_.yml
+++ b/config/crescenttool/default/image.style.banner_cta_slider_175x42_.yml
@@ -1,18 +1,18 @@
-uuid: 707e1abd-1f99-4d87-a830-972d6582498a
+uuid: b80ff7ef-c835-4d42-b60f-6a987c9d9e19
 langcode: en
 status: true
 dependencies:
   module:
     - focal_point
-name: banner_cta_slider_210x50_
-label: 'Banner CTA Slider - Large (210x50)'
+name: banner_cta_slider_175x42_
+label: 'Banner CTA Slider - Small (175x42)'
 effects:
   879c7e64-afc8-4c5b-9b4b-123ca3d758a8:
     uuid: 879c7e64-afc8-4c5b-9b4b-123ca3d758a8
     id: focal_point_scale_and_crop
     weight: 1
     data:
-      width: 210
-      height: 50
+      width: 175
+      height: 42
       crop_type: focal_point
 pipeline: smushit
