ConfigIgnore: Adding some more needed items to config ignore.

--- a/config/crescenttool/default/config_ignore.settings.yml
+++ b/config/crescenttool/default/config_ignore.settings.yml
@@ -1,3 +1,6 @@
 ignored_config_entities:
   - 'block.block.custom_*'
   - 'crescenttool_core.settings:warranty_highest_exported_sid'
+  - 'acquia_connector.settings:spi.site_environment'
+  - 'acquia_connector.settings:spi.site_uuid'
+  - 'search_api.server.acquia_search_server:backend_config.connector_config'
