--- a/config/crescenttool/default/config_split.config_split.remote_prod.yml
+++ b/config/crescenttool/default/config_split.config_split.remote_prod.yml
@@ -15,11 +15,12 @@ theme: {  }
 blacklist:
   - purge.logger_channels
 graylist:
+  - crescenttool_core.settings
   - google_tag.container.google_tag_59x3zt8
   - google_tag.container.primary
   - purge.logger_channels
-  - system.performance
   - purge.plugins
+  - system.performance
   - purge_queuer_coretags.settings
 graylist_dependents: true
 graylist_skip_equal: true
