--- a/config/crescenttool/default/core.entity_form_display.node.product_trade.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.product_trade.default.yml
@@ -41,9 +41,13 @@ content:
     region: content
   field_trade:
     weight: 1
-    settings: {  }
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
-    type: options_select
+    type: entity_reference_autocomplete
     region: content
   langcode:
     type: language_select
