WebformUpdate: Updating webforms and paragraphs.

--- a/composer.json
+++ b/composer.json
@@ -103,7 +103,7 @@
         "drupal/migrate_tools": "^5.0",
         "drupal/module_filter": "^3.1",
         "drupal/node_view_permissions": "^1.5",
-        "drupal/paragraphs": "^1.11",
+        "drupal/paragraphs": "^1.x-dev",
         "drupal/paragraphs_ee": "1.x-dev@dev",
         "drupal/path_redirect_import": "1.x-dev",
         "drupal/pathauto": "^1.6",
