GTM: Added the new GTM config.

--- a/config/crescenttool/default/config_split.config_split.remote_prod.yml
+++ b/config/crescenttool/default/config_split.config_split.remote_prod.yml
@@ -16,7 +16,7 @@ blacklist:
   - purge.logger_channels
 graylist:
   - crescenttool_core.settings
-  - google_tag.container.google_tag_59x3zt8
+  - google_tag.container.google_tag_mzk37hc
   - google_tag.container.primary
   - purge.logger_channels
   - purge.plugins
