updated js with cleaned up and condensed code

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -486,6 +486,7 @@ paragraph--full--banner-cta-slider:
     - core/drupal
     - core/jquery
     - core/jquery.once
+    - crescenttool/library--swiper
 
 # Pull Quote #
 paragraph--full--pullquote:
