--- a/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.thumbnail.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.banner_cta_slide.thumbnail.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.paragraph.banner_cta_slide.field_thumbnail_image
     - field.field.paragraph.banner_cta_slide.field_title
     - paragraphs.paragraphs_type.banner_cta_slide
-    - responsive_image.styles.cta_slider_thumb
   module:
     - blazy
 id: paragraph.banner_cta_slide.thumbnail
@@ -33,7 +32,7 @@ content:
     label: hidden
     settings:
       image_style: ''
-      responsive_image_style: cta_slider_thumb
+      responsive_image_style: ''
       media_switch: ''
       thumbnail_style: ''
       ratio: ''
