--- a/config/crescenttool/default/image.style.large_landscape.yml
+++ b/config/crescenttool/default/image.style.large_landscape.yml
@@ -5,14 +5,14 @@ dependencies:
   module:
     - focal_point
 name: large_landscape
-label: 'Large Landscape (920x560)'
+label: 'Large - Landscape (960x590)'
 effects:
   5af6c012-54f1-4325-8c6c-36ca6322d545:
     uuid: 5af6c012-54f1-4325-8c6c-36ca6322d545
     id: focal_point_scale_and_crop
     weight: 1
     data:
-      width: 920
-      height: 560
+      width: 960
+      height: 590
       crop_type: focal_point
 pipeline: smushit
