--- a/config/crescenttool/default/image.style.large_landscape_16_9_960x560_.yml
+++ b/config/crescenttool/default/image.style.large_landscape_16_9_960x560_.yml
@@ -5,7 +5,7 @@ dependencies:
   module:
     - focal_point
 name: large_landscape_16_9_960x560_
-label: 'Large Landscape 16:9 (960x560)'
+label: 'Large - Landscape 16:9 (960x560)'
 effects:
   32d77555-9168-4a89-bae9-17fa7468e389:
     uuid: 32d77555-9168-4a89-bae9-17fa7468e389
