--- a/config/crescenttool/default/responsive_image.styles.cta_slider_16x9.yml
+++ b/config/crescenttool/default/responsive_image.styles.cta_slider_16x9.yml
@@ -3,8 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - image.style.large_landscape_16_9_960x560_
-    - image.style.medium_landscape_5_4_768x560_
+    - image.style.large_landscape
+    - image.style.medium_landscape_3x2
+    - image.style.small_landscape_416x255_
+    - image.style.small_landscape_504x310_
   theme:
     - crescenttool
 id: cta_slider_16x9
@@ -14,16 +16,26 @@ image_style_mappings:
     breakpoint_id: crescenttool.grande
     multiplier: 1x
     image_mapping_type: image_style
-    image_mapping: large_landscape_16_9_960x560_
+    image_mapping: ''
   -
     breakpoint_id: crescenttool.large_min
     multiplier: 1x
     image_mapping_type: image_style
-    image_mapping: medium_landscape_5_4_768x560_
+    image_mapping: large_landscape
   -
-    breakpoint_id: crescenttool.All
+    breakpoint_id: crescenttool.medium_min
     multiplier: 1x
     image_mapping_type: image_style
-    image_mapping: medium_landscape_5_4_768x560_
+    image_mapping: medium_landscape_3x2
+  -
+    breakpoint_id: crescenttool.small_min
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: small_landscape_504x310_
+  -
+    breakpoint_id: crescenttool.xsmall
+    multiplier: 1x
+    image_mapping_type: image_style
+    image_mapping: small_landscape_416x255_
 breakpoint_group: crescenttool
-fallback_image_style: medium_landscape_5_4_768x560_
+fallback_image_style: large_landscape
