Config to fix search for CT

--- a/config/crescenttool/default/search_api.index.acquia_search_index_products.yml
+++ b/config/crescenttool/default/search_api.index.acquia_search_index_products.yml
@@ -3,30 +3,27 @@ langcode: en
 status: true
 dependencies:
   module:
-    - acquia_search
     - search_api_solr
-    - node
-    - taxonomy
     - media
+    - taxonomy
+    - node
     - search_api
   config:
+    - field.storage.media.field_media_image
+    - field.storage.node.field_product_images
     - field.storage.node.body
+    - field.storage.node.field_product_classifications
+    - field.storage.taxonomy_term.field_classification_id
+    - field.storage.node.field_product_specifications
     - field.storage.node.field_featured_product
     - field.storage.node.field_keywords
     - field.storage.node.field_long_description
-    - field.storage.node.field_new_product
-    - field.storage.node.field_product_classifications
-    - field.storage.taxonomy_term.field_classification_id
-    - field.storage.media.field_media_image
-    - field.storage.node.field_product_images
-    - field.storage.node.field_product_specifications
-    - field.storage.node.field_set
     - field.storage.node.field_set_components
+    - field.storage.node.field_new_product
+    - field.storage.node.field_set
     - search_api.server.acquia_search_server
     - core.entity_view_mode.node.full
 third_party_settings:
-  acquia_search:
-    use_edismax: 1
   search_api_solr:
     finalize: false
     commit_before_finalize: false
@@ -338,7 +335,7 @@ tracker_settings:
   default:
     indexing_order: fifo
 options:
-  index_directly: false
-  cron_limit: 50
+  index_directly: true
   track_changes_in_references: true
+  cron_limit: 50
 server: acquia_search_server
