--- a/config/crescenttool/default/search_api.index.acquia_search_index.yml
+++ b/config/crescenttool/default/search_api.index.acquia_search_index.yml
@@ -4,25 +4,25 @@ status: true
 dependencies:
   module:
     - search_api_solr
-    - node
-    - paragraphs
     - media
+    - paragraphs
     - file
+    - node
     - search_api
   config:
-    - field.storage.node.body
-    - field.storage.node.field_link
-    - field.storage.node.field_components
-    - field.storage.paragraph.field_link
-    - field.storage.paragraph.field_content
-    - field.storage.paragraph.field_title
-    - field.storage.paragraph.field_links
-    - field.storage.media.field_media_file
-    - field.storage.paragraph.field_media_items
     - field.storage.media.field_media_image
+    - field.storage.node.field_components
     - field.storage.paragraph.field_media_item
+    - field.storage.paragraph.field_media_items
+    - field.storage.node.body
+    - field.storage.media.field_media_file
     - field.storage.node.field_component_hero
     - field.storage.node.field_media_type
+    - field.storage.paragraph.field_title
+    - field.storage.paragraph.field_content
+    - field.storage.node.field_link
+    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_links
     - search_api.server.acquia_search_server
     - core.entity_view_mode.node.full
 third_party_settings:
@@ -401,7 +401,7 @@ tracker_settings:
   default:
     indexing_order: fifo
 options:
-  index_directly: false
-  cron_limit: 50
+  index_directly: true
   track_changes_in_references: true
+  cron_limit: 50
 server: acquia_search_server
