--- a/config/gearwrench/default/search_api.index.acquia_search_index_products.yml
+++ b/config/gearwrench/default/search_api.index.acquia_search_index_products.yml
@@ -3,29 +3,26 @@ langcode: en
 status: true
 dependencies:
   module:
-    - acquia_search
     - search_api_solr
-    - node
-    - taxonomy
     - media
+    - taxonomy
+    - node
     - search_api
   config:
-    - field.storage.node.body
-    - field.storage.node.field_featured_product
-    - field.storage.node.field_long_description
-    - field.storage.node.field_new_product
-    - field.storage.node.field_product_classifications
-    - field.storage.taxonomy_term.field_classification_id
     - field.storage.media.field_media_image
     - field.storage.node.field_product_images
+    - field.storage.node.body
+    - field.storage.node.field_product_classifications
+    - field.storage.taxonomy_term.field_classification_id
     - field.storage.node.field_product_specifications
-    - field.storage.node.field_set
+    - field.storage.node.field_featured_product
+    - field.storage.node.field_long_description
     - field.storage.node.field_set_components
+    - field.storage.node.field_new_product
+    - field.storage.node.field_set
     - search_api.server.acquia_search_server
     - core.entity_view_mode.node.full
 third_party_settings:
-  acquia_search:
-    use_edismax: 1
   search_api_solr:
     finalize: false
     commit_before_finalize: false
@@ -211,7 +208,10 @@ field_settings:
         anonymous: anonymous
       view_mode:
         'entity:node':
-          product: full
+          landing_page: full
+          page: full
+          social_post: full
+          styleguide: ''
   status:
     label: status
     datasource_id: 'entity:node'
@@ -331,7 +331,7 @@ tracker_settings:
   default:
     indexing_order: fifo
 options:
-  index_directly: false
+  index_directly: true
+  track_changes_in_references: false
   cron_limit: 50
-  track_changes_in_references: true
 server: acquia_search_server
