SolrConfig: Updated the Solr config for GW.

--- a/config/gearwrench/default/metatag.metatag_defaults.global.yml
+++ b/config/gearwrench/default/metatag.metatag_defaults.global.yml
@@ -9,6 +9,7 @@ label: Global
 tags:
   title: '[current-page:title] | [site:name]'
   canonical_url: '[current-page:url]'
+  google: uQ1NcwycY2b1opQL-Qnv_TB55dx_YSXPGDnpfa59VBk
   apple_touch_icon_120x120: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-120x120.png'
   shortcut_icon: '[theme-filter:path-to-theme]/favicons/favicon.ico'
   icon_32x32: '[theme-filter:path-to-theme]/favicons/icon-32x32.png'
