--- a/config/gearwrench/default/search_api.index.acquia_search_index.yml
+++ b/config/gearwrench/default/search_api.index.acquia_search_index.yml
@@ -404,6 +404,6 @@ tracker_settings:
     indexing_order: fifo
 options:
   index_directly: true
-  track_changes_in_references: false
+  track_changes_in_references: true
   cron_limit: 50
 server: acquia_search_server
