--- a/composer.json
+++ b/composer.json
@@ -82,6 +82,7 @@
         "drupal/field_group_settings": "^3.0",
         "drupal/field_label": "^1.0",
         "drupal/field_states_ui": "^2.0",
+        "drupal/file_mdm": "2.2",
         "drupal/focal_point": "^1.5",
         "drupal/google_tag": "^1.3",
         "drupal/image_effects": "^3.1",
@@ -261,7 +262,7 @@
                 "https://www.drupal.org/node/2516938": "https://www.drupal.org/files/issues/2020-06-09/core-toolbar-mobile-2516938-73.patch",
                 "https://www.drupal.org/node/2642122": "https://www.drupal.org/files/issues/2021-07-12/2642122-141.patch",
                 "https://www.drupal.org/node/2827921": "https://www.drupal.org/files/issues/2827921-remove-missing-responsive-image-width-exception.patch",
-                "https://www.drupal.org/node/2998816": "https://www.drupal.org/files/issues/2018-09-11/arraystringconversion-2998816-12768980.patch",
+                "https://www.drupal.org/project/drupal/issues/2663316": "https://www.drupal.org/files/issues/2019-10-21/2663316-76.drupal.Broken-title-in-modal-dialog-when-title-is-a-render-array.patch",
                 "https://www.drupal.org/node/3006729": "https://www.drupal.org/files/issues/2019-05-28/add-context-to-media-iframe-3006729-5.patch",
                 "https://www.drupal.org/node/3188588": "https://www.drupal.org/files/issues/2020-12-15/3188588-02.patch"
             },
