--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_one.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_one.yml
@@ -67,7 +67,7 @@ process:
     method: row
     source: remote_name
   product_classifications_array:
-    plugin: get_all_product_classifications
+    plugin: apex_get_all_product_classifications
     source: remote_name
     depth: 2
   field_product_classifications:
@@ -88,8 +88,11 @@ process:
       vocabulary_id: vid
       target_id: target_id
   field_show_set_filter:
-    plugin: determine_set_filter_show
+    plugin: apex_determine_set_filter_show
     source: remote_id
+    allowed_categories:
+      - W1_736078
+      - W1_22484
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
