--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_three.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_product_category_pages_level_three.yml
@@ -58,7 +58,7 @@ process:
     method: row
     source: remote_name
   product_classifications_array:
-    plugin: get_all_product_classifications
+    plugin: apex_get_all_product_classifications
     source: remote_name
     depth: 2
   field_product_classifications:
@@ -79,8 +79,15 @@ process:
       vocabulary_id: vid
       target_id: target_id
   field_show_set_filter:
-    plugin: determine_set_filter_show
+    plugin: apex_determine_set_filter_show
     source: remote_id
+    allowed_categories:
+      - W3_792548
+      - W3_792549
+      - W3_792550
+      - W3_792551
+      - W3_792552
+      - W3_803453
 destination:
   plugin: 'entity:node'
 migration_dependencies: {  }
