--- a/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
+++ b/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
@@ -97,6 +97,10 @@ source:
       name: remote_related_products
       label: 'Related Products'
       selector: Values
+    -
+      name: remote_keywords
+      label: Keywords
+      selector: '//*[@AttributeID=''ATT737269'']'
   ids:
     remote_sku:
       type: string
@@ -353,6 +357,7 @@ process:
       - JawWidthUpper
       - ATT415
       - ATT880
+      - ATT753929
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
@@ -404,6 +409,7 @@ process:
     plugin: apex_get_attribute_value
     source: remote_set_contents
     attribute: ATT921
+  field_keywords: remote_keywords
 destination:
   plugin: apex_product
   bundle: product
