--- a/config/crescenttool/default/core.entity_view_display.paragraph.hero_slide.search_teaser.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.hero_slide.search_teaser.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.hero_slide.field_media_background
     - field.field.paragraph.hero_slide.field_style
     - field.field.paragraph.hero_slide.field_title
+    - field.field.paragraph.hero_slide.field_title_image
     - image.style.search_teaser_261x256
     - paragraphs.paragraphs_type.hero_slide
   module:
@@ -67,4 +68,5 @@ hidden:
   field_link: true
   field_style: true
   field_title: true
+  field_title_image: true
   search_api_excerpt: true
