--- a/config/crescenttool/default/core.entity_form_display.paragraph.hero_slide.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.paragraph.hero_slide.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.paragraph.hero_slide.field_media_background
     - field.field.paragraph.hero_slide.field_style
     - field.field.paragraph.hero_slide.field_title
+    - field.field.paragraph.hero_slide.field_title_image
     - paragraphs.paragraphs_type.hero_slide
   module:
     - field_group
@@ -44,7 +45,7 @@ content:
     third_party_settings: {  }
   field_content:
     type: text_textarea
-    weight: 2
+    weight: 3
     region: content
     settings:
       rows: 5
@@ -52,7 +53,7 @@ content:
     third_party_settings: {  }
   field_link:
     type: link_default
-    weight: 3
+    weight: 4
     region: content
     settings:
       placeholder_url: ''
@@ -78,6 +79,13 @@ content:
     settings:
       size: 60
       placeholder: ''
+    third_party_settings: {  }
+  field_title_image:
+    type: media_library_widget
+    weight: 2
+    region: content
+    settings:
+      media_types: {  }
     third_party_settings: {  }
 hidden:
   created: true
