--- a/config/crescenttool/default/core.entity_view_display.paragraph.hero_slide.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.hero_slide.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.paragraph.hero_slide.field_media_background
     - field.field.paragraph.hero_slide.field_style
     - field.field.paragraph.hero_slide.field_title
+    - field.field.paragraph.hero_slide.field_title_image
     - paragraphs.paragraphs_type.hero_slide
   module:
     - link
@@ -69,6 +70,15 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_title_image:
+    type: entity_reference_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
+    weight: 6
     region: content
 hidden:
   search_api_excerpt: true
