--- a/config/crescenttool/default/core.entity_view_display.paragraph.hero_slide.preview.yml
+++ b/config/crescenttool/default/core.entity_view_display.paragraph.hero_slide.preview.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.hero_slide.field_media_background
     - field.field.paragraph.hero_slide.field_style
     - field.field.paragraph.hero_slide.field_title
+    - field.field.paragraph.hero_slide.field_title_image
     - image.style.thumbnail_cropped
     - paragraphs.paragraphs_type.hero_slide
   module:
@@ -103,4 +104,5 @@ content:
     region: content
 hidden:
   field_link: true
+  field_title_image: true
   search_api_excerpt: true
