VYRKCATG-326: Fixed the shown icons in mobile.

--- a/config/gearwrench/default/views.view.product_category.yml
+++ b/config/gearwrench/default/views.view.product_category.yml
@@ -392,7 +392,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: false
-          content: '<div class=''sort-icon''></div>'
+          content: '<div class=''filter-icon''></div>'
           tokenize: false
       footer: {  }
       display_extenders:
