VYRKCATG-329: Removed the product ID from the metadata title and description.

--- a/config/crescenttool/default/metatag.metatag_defaults.node__product.yml
+++ b/config/crescenttool/default/metatag.metatag_defaults.node__product.yml
@@ -5,8 +5,8 @@ dependencies: {  }
 id: node__product
 label: 'Content: Product'
 tags:
-  description: 'Count on Crescent Tools to get the job done. Get the [node:title] [node:field_long_description] here.'
-  title: '[node:title] [node:field_long_description] - Crescent Tools'
+  title: '[node:field_long_description] - Crescent Tools'
+  description: 'Count on Crescent Tools to get the job done. Get the [node:field_long_description] here.'
   og_description: 'Count on Crescent Tools to get the job done. Get the [node:title] [node:field_long_description] here.'
   og_title: '[node:title] [node:field_long_description] - Crescent Tools'
   twitter_cards_description: 'Count on Crescent Tools to get the job done. Get the [node:title] [node:field_long_description] here.'
