--- a/config/gearwrench/default/metatag.metatag_defaults.node__product.yml
+++ b/config/gearwrench/default/metatag.metatag_defaults.node__product.yml
@@ -5,8 +5,8 @@ dependencies: {  }
 id: node__product
 label: 'Content: Product'
 tags:
-  description: 'Count on GEARWRENCH to get the job done. Get the [node:title] [node:field_long_description] here.'
-  title: '[node:title] [node:field_long_description] - Gearwrench'
+  title: '[node:field_long_description] - Gearwrench'
+  description: 'Count on GEARWRENCH to get the job done. Get the [node:field_long_description] here.'
   og_description: 'Count on GEARWRENCH to get the job done. Get the [node:title] [node:field_long_description] here.'
   og_title: '[node:title] [node:field_long_description] - Gearwrench'
   twitter_cards_description: 'Count on GEARWRENCH to get the job done. Get the [node:title] [node:field_long_description] here.'
