VYRKCATG-333: Changed the privacy policy checkbox text.

--- a/config/crescenttool/default/webform.webform.email_sign_up.yml
+++ b/config/crescenttool/default/webform.webform.email_sign_up.yml
@@ -41,7 +41,7 @@ elements: |-
     '#type': webform_flexbox
     privacy_policy:
       '#type': checkbox
-      '#title': 'Privacy Policy'
+      '#title': 'I''ve read and accept the <a href="/privacy-policy" target="_blank">privacy policy</a>.'
       '#required': true
       '#required_error': Required
       '#wrapper_attributes':
