VYRKCATG-331: Added missing facets to GW and CT to the product imports and category facets. Only CT was missing some category facets.

--- a/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
+++ b/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
@@ -358,6 +358,13 @@ process:
       - ATT415
       - ATT880
       - ATT753929
+      - ATT744972
+      - ATT744973
+      - ATT806802
+      - ATT659
+      - ATT753947
+      - ATT739684
+      - ATT739685
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
