--- a/config/crescenttool/default/migrate_plus.migration.crescenttool_products.yml
+++ b/config/crescenttool/default/migrate_plus.migration.crescenttool_products.yml
@@ -364,6 +364,17 @@ process:
       - ATT127
       - ATT130
       - ATT753929
+      - ATT934
+      - ATT769436
+      - ATT278
+      - ATT806593
+      - ATT659
+      - ATT340
+      - ATT806802
+      - ATT744973
+      - ATT744972
+      - ATT739684
+      - ATT739685
   field_product_specifications:
     plugin: sub_process
     source: '@product_specifications_array'
