--- a/config/gearwrench/remote_stage/purge.logger_channels.yml
+++ b/config/gearwrench/remote_stage/purge.logger_channels.yml
@@ -15,3 +15,9 @@ channels:
     id: diagnostics
     grants:
       - 3
+  -
+    id: purger_acquia_purge_788c7597ac
+    grants:
+      - 0
+      - 2
+      - 3
