VYRKCATG-327b: Setup product brand page filters to show nesting correctly and styled it.

--- a/config/crescenttool/default/views.view.product_category.yml
+++ b/config/crescenttool/default/views.view.product_category.yml
@@ -597,7 +597,7 @@ display:
           reduce_duplicates: false
           vid: product_classifications
           type: select
-          hierarchy: false
+          hierarchy: true
           limit: true
           error_message: true
       filter_groups:
