VYRKCATG-343: Created a new APEX Common module to hold common things used on all sites. The first thing I did was remove Canadian options from the address field in our forms.

--- a/config/crescenttool/local/core.extension.yml
+++ b/config/crescenttool/local/core.extension.yml
@@ -12,6 +12,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   allowed_formats: 0
+  apex_common: 0
   apex_migrations: 0
   apex_tools_instagram_feed: 0
   automated_cron: 0
