--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -12,6 +12,7 @@ module:
   advagg_css_minify: 0
   advagg_js_minify: 0
   allowed_formats: 0
+  apex_common: 0
   apex_migrations: 0
   apex_tools_instagram_feed: 0
   automated_cron: 0
