VYRKCATG-225: Added a fix for CT focus. Also added a way to prevent the PriceSpider modal from hopping to the top of the page.

--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -274,6 +274,8 @@ node--teaser--product:
   css:
     component:
       css/libraries/node/teaser--product.css: { }
+  js:
+    js/libraries/node/teaser--product.js: {}
 
 node--teaser--media-page:
   version: 1.x
