--- a/config/gearwrench/default/node.type.page.yml
+++ b/config/gearwrench/default/node.type.page.yml
@@ -1,7 +1,14 @@
 uuid: e5736222-5688-4755-bfbb-df1032dcd417
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 _core:
   default_config_hash: KuyA4NHPXcmKAjRtwa0vQc2ZcyrUJy6IlS2TAyMNRbc
 name: 'Basic page'
