VYRKCATG-347: Added CT sitemap settings changes.

--- a/config/crescenttool/default/node.type.page.yml
+++ b/config/crescenttool/default/node.type.page.yml
@@ -1,7 +1,14 @@
 uuid: b4ed12c7-bf1f-42e5-86e8-a9dd26130b3b
 langcode: en
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - menu_ui
+third_party_settings:
+  menu_ui:
+    available_menus:
+      - main
+    parent: 'main:'
 name: 'Basic page'
 type: page
 description: 'Use <em>basic pages</em> for your static content, such as an ''About us'' page.'
