--- a/config/crescenttool/default/metatag.metatag_defaults.node__product.yml
+++ b/config/crescenttool/default/metatag.metatag_defaults.node__product.yml
@@ -11,3 +11,10 @@ tags:
   og_title: '[node:title] [node:field_long_description] - Crescent Tools'
   twitter_cards_description: 'Count on Crescent Tools to get the job done. Get the [node:title] [node:field_long_description] here.'
   twitter_cards_title: '[node:title] [node:field_long_description] - Crescent Tools'
+  schema_product_brand: 'a:2:{s:5:"@type";s:5:"Brand";s:4:"name";s:8:"Crescent";}'
+  schema_product_image: 'a:3:{s:5:"@type";s:11:"ImageObject";s:20:"representativeOfPage";s:4:"True";s:3:"url";s:29:"[node:field_media:entity:url]";}'
+  schema_product_url: '[node:url]'
+  schema_product_type: Product
+  schema_product_name: '[node:field_long_description]'
+  schema_product_category: '[node:field_product_classifications:0:entity]'
+  schema_product_description: '[node:field_product_features]'
