--- a/config/gearwrench/local/core.extension.yml
+++ b/config/gearwrench/local/core.extension.yml
@@ -95,6 +95,7 @@ module:
   metatag_hreflang: 0
   metatag_mobile: 0
   metatag_open_graph: 0
+  metatag_open_graph_products: 0
   metatag_twitter_cards: 0
   metatag_verification: 0
   migrate: 0
@@ -116,6 +117,8 @@ module:
   responsive_image: 0
   rest: 0
   robotstxt: 0
+  schema_metatag: 0
+  schema_product: 0
   search: 0
   search_api: 0
   search_api_solr: 0
