--- a/config/crescenttool/default/core.extension.yml
+++ b/config/crescenttool/default/core.extension.yml
@@ -117,6 +117,8 @@ module:
   responsive_image: 0
   rest: 0
   robotstxt: 0
+  schema_metatag: 0
+  schema_product: 0
   search: 0
   search_api: 0
   search_api_solr: 0
