VYRKCATG-340: Updating site info.

--- a/config/gearwrench_au/default/system.site.yml
+++ b/config/gearwrench_au/default/system.site.yml
@@ -2,8 +2,8 @@ _core:
   default_config_hash: l58O_yEXSo-SeJi19LXdzTU1tNJG3lmnIhCitRkM1tk
 langcode: en
 uuid: 34cd75f0-7f83-4def-acff-137e76aa0d4e
-name: Gearwrench
-mail: patrick.thurmond@vmlyr.com
+name: 'Gearwrench Australia'
+mail: no-reply@gearwrench.com
 slogan: ''
 page:
   403: ''
